# OpenLanScan

./: CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  check_project.sh  fix_permissions.sh  index.html  package-lock.json  package.json
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  port_scanner.rs  resolver.rs  scanner.rs  types.rs  vendor.rs
src/lib/: ConfigDialog.svelte  HostDetails.svelte  HostTable.svelte  ProgressBar.svelte  tauri.ts
