[package]
name = "openlanscan"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Network scanning
pnet = "0.35"
pnet_datalink = "0.35"
# DNS resolution
trust-dns-resolver = "0.23"
# mDNS discovery
mdns-sd = "0.11"
# MAC vendor lookup
mac_oui = "0.4"
# Async
futures = "0.3"
# Network interfaces
if-addrs = "0.13"
# Port scanning
async-trait = "0.1"
# Error handling
anyhow = "1"
thiserror = "1"
# Lazy static initialization
once_cell = "1"
# System libc for cross-platform getnameinfo
libc = "0.2"
# Logging
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
